# gemini-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  log.json
.github/workflows/: rust.yml
examples/: ask.rs  json.rs  models.rs
src/: chat.rs  client.rs  error.rs  files.rs  harm_probability.rs  image_test.rs  lib.rs  main.rs  response.rs  safety.rs  safety_settings.rs  saving.rs  settings.rs  types.rs
