[package]
name = "gemini-rs"
version = "0.4.1"
edition = "2021"
license = "MIT"
description = "A library to interact with the Google Gemini API"
homepage = "https://github.com/Shuflduf/gemini-rs"
repository = "https://github.com/Shuflduf/gemini-rs"
readme = "README.md"
keywords = ["ai", "google", "gemini"]

[dependencies]
json = "0.12.4"
reqwest = "0.12.9"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
