[package]
name = "gemini-rs"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A library to interact with the Google Gemini API"
homepage = "https://github.com/Shuflduf/gemini-rs"
repository = "https://github.com/Shuflduf/gemini-rs"
readme = "README.md"
keywords = ["ai", "google", "gemini"]

[dependencies]
reqwest = "0.12.9"
serde_json = "1.0.139"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
